--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Slidefall - Itzz Me</title>
+        <title>slidefall - Itzz Me</title>
         <script src="https://cdn.jsdelivr.net/npm/p5@1.6.0/lib/p5.js"></script>
         <script src="main.js"></script>
         <link rel="stylesheet" href="styles.css">
     </head>
     <body>
-        <h1>Slidefall</h1>
+        <h1>slidefall</h1>
     </body>
 </html>
